--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "lucide-react": "0.473.0",
+    "marked": "15.0.0",
     "@google/genai": "^1.34.0"
   },
   "devDependencies": {
