test account business id

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BUSINESS_ID="f7735113-3837-475c-a411-8377d099c6ef"
+VITE_BUSINESS_ID="3949c8c5-8396-4d24-9b34-054445cdd3db"
+# VITE_BUSINESS_ID="f7735113-3837-475c-a411-8377d099c6ef"
